# brilliant

./: .gitignore  README.md  concat-week-29-05-2018.py  devision_24.py  docker-build.bash  docker-run-notebook.bash  docker-run-python-bash.bash  environment.yml  formula.txt  integers-week-14-05-2018.py  json_to_csv.py  make-full.py  parse_primes_output.py  perfect_square_17.py  plak.py  solution.txt  week_14_may_2018-1.py  week_14_may_2018.py  week_21_may_2018-adv-1.py  week_21_may_2018-adv-5.py
absent/: absent.py
c_puzzle/: .gitignore  bit-array.c  clowns.c  compile.sh  prison-problem-alt-1.c  prison-problem-bit-array.c  prison-problem.c  random-file-access.c  size-of-types.c
cadquery/: 2d-example.py  kist.py  plate_example.py  readme.md  tryout_cadquery.py
check_links/: .gitignore  link_checker.py
floor/: main.py  readme.txt
generations/: generations.py  test_generation.py  testconfig.py
gpstools/: README.md  reduce.py
hello_bytes/: bytes.py  object_assign_speed.py  prison-problem.py  test_bytes_file.py  test_enum.py  test_libdif.py
hello_c++_QT/: CMakeLists.txt  main.cpp
hello_cjson/: CMakeLists.txt  hello_cjson.c
hello_cmake/: README.md
hello_cppflow/: CMakeLists.txt  main.cpp
hello_docker_c++/src/: CMakeLists.txt  Dockerfile  main.cpp
hello_faces/: Dockerfile  display_dialog.py  display_image.py  facedetect_main.py  go.sh  prepare_training_pictures.py  train_face_names.py  web_cam_detect.py
hello_freecad/: 1x1x3.FCStd  1x1x3.FCStd1  2x2x3.FCStd  2x2x3.FCStd1  2x4x3.FCStd  2x4x3.FCStd1  README.md  assy_001.FCStd  assy_001.FCStd1
hello_gramps/: gramps2graph.py
hello_https/: package-lock.json  package.json  start-https.sh
hello_intersect/: README.md  intersect.py
hello_keras_img/: Dockerfile  model_1.h5  predict.py  predict_open_cv.py  train_model.py
hello_mathplot_qt/: mathplot_to_np_img.py  qt_gui_01.py  qt_gui_02.py  qt_gui_03.py  try_out_qt-mathplot.py
hello_maze/: basegrid.py  gamegrid.py  graph.py  make_maze.py  maze.py  maze_gui.py  maze_model.py  readme.md  test.py  test_basegrid.py  test_gamegrid.py  test_graph.py  test_maze.py  test_maze_model.py  try_out.py
hello_mermaid/: .gitignore  README.md  flow.html  package-lock.json  package.json  style-gantt.css
hello_motion/: .gitignore  README.md  motion.py  test.py  test_motion.py
hello_networkx/: example-read-write.py  nn_with_networkx.py
hello_nn/: .gitignore  install_local_packages.sh
hello_npm/: index.html
hello_open_cv_dnn/: utensil_detector.py
hello_planning/: README.md
hello_pygame/: chunk_sort.py  circle_poly.py  game_003.py  moving_line.py  sorting_lines.py
hello_tesseract/: CMakeLists.txt  Dockerfile  main.cpp
hello_threejs/: test-001.html
hello_wiki/: .gitignore  README.md  clean-page_index.py  download_wiki.py  (+8 more)
(+179 files in other folders)
